--- a/style.css
+++ b/style.css
@@ -42,7 +42,13 @@ width:760px;
 margin:0 auto;
 }
 
-
+#HUD_text
+{
+width: 755px;
+height: 20px;
+border: 2px solid #000000;
+text-align: center;
+}
 
 /*
 
